--- a/decoder/.gitignore
+++ b/decoder/.gitignore
@@ -1,12 +1,5 @@
 channels/
-Debug/*.so
-Debug/**/*.o
-Debug/**/*.d
-Release/*.so
-Release/**/*.o
-Release/**/*.d
-Debug/decoder
-Release/decoder
-Release Static/decoder
-Release Static/**/*.o
-Release Static/**/*.d
+Debug/
+Release/
+Release Static/
+build
