--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ sudo: required
 language: cpp
 compiler:
   - gcc
-  - clang
 
 before_install:
   - sudo add-apt-repository ppa:myriadrf/drivers -y
   - sudo add-apt-repository ppa:myriadrf/gnuradio -y
   - sudo apt-get -qq update
-  - sudo apt-get install -y libairspy-dev
+  - sudo apt-get install -y libairspy-dev libusb-1.0-0-dev
 env:
   - CTEST_OUTPUT_ON_FAILURE=1 CMAKE_INSTALL_PREFIX=/usr
 
