--- a/decoder/xritDecoder.vcxproj.filters
+++ b/decoder/xritDecoder.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="src\parameters.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ExitHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChannelDispatcher.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\StatisticsDispatcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ExitHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
