Updated Travis config

--- a/demodulator/CMakeLists.txt
+++ b/demodulator/CMakeLists.txt
@@ -46,12 +46,14 @@ if(WIN32)
   target_link_libraries (${PROJECT_NAME} airspy.a)
   target_link_libraries (${PROJECT_NAME} usb-1.0.a)
   target_link_libraries (${PROJECT_NAME} pthread.a)
+  target_link_libraries (${PROJECT_NAME} rtlsdr.a)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libgcc -static-libstdc++")
 else()
   target_link_libraries (${PROJECT_NAME} airspy)
   target_link_libraries (${PROJECT_NAME} usb-1.0)
   target_link_libraries (${PROJECT_NAME} pthread)
+  target_link_libraries (${PROJECT_NAME} rtlsdr)
 endif()
 
 
