--- a/demodulator/CMakeLists.txt
+++ b/demodulator/CMakeLists.txt
@@ -54,6 +54,9 @@ if(WIN32)
   target_link_libraries (${PROJECT_NAME} rtlsdr.a)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libgcc -static-libstdc++")
+  if(NON_FREE)
+	message(ERROR "Please compile using Visual Studio. NON FREE not supported by Mingw")
+  endif()
 else()
   target_link_libraries (${PROJECT_NAME} airspy)
   target_link_libraries (${PROJECT_NAME} usb-1.0)
