Fixed cmake missing on travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo add-apt-repository ppa:myriadrf/drivers -y
   - sudo add-apt-repository ppa:myriadrf/gnuradio -y
   - sudo apt-get -qq update
-  - sudo apt-get install -y libairspy-dev libusb-1.0-0-dev libhackrf-dev libhackrf0
+  - sudo apt-get install -y libairspy-dev libusb-1.0-0-dev libhackrf-dev libhackrf0 cmake
 env:
   - CTEST_OUTPUT_ON_FAILURE=1 CMAKE_INSTALL_PREFIX=/usr
 
