--- a/demodulator/xritdemod.cfg
+++ b/demodulator/xritdemod.cfg
@@ -6,9 +6,10 @@ mode=lrit
 frequency=1691000000
 mixerGain=5
 lnaGain=5
-sampleRate=3000000
+sampleRate=1250000
 vgaGain=5
-deviceType=airspy
+deviceType=cfile
 sendConstellation=true
 decoderAddress=127.0.0.1
 decoderPort=5000
+filename=/media/ELTN/Baseband Records/GOES/gqrx_20161202_145551_1691000000_1250000_fc.raw
